other/audit-event-on-delete/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-event-on-delete
status:
  ready: true
