other/audit-event-on-delete/.chainsaw-test/chainsaw-step-04-assert-1.yaml
apiVersion: v1
involvedObject:
  apiVersion: v1
  kind: Secret
  name: secret-tbd
  namespace: delete-event-ns
kind: Event
metadata:
  namespace: delete-event-ns
reason: Delete
source:
  component: kyverno
type: Warning
