other/audit-event-on-delete/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: audit-event-on-delete
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - apply:
        file: ../audit-event-on-delete.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: secret.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: secret-tbd
          namespace: delete-event-ns
  - name: step-04
    try:
    - assert:
        file: chainsaw-step-04-assert-1.yaml
